test/invalid/baseline/nonempty-sequence.txt
Syntax error at line 2, since `dictionary X`:
short> myfield = [3];
                  ^ Default sequence value must be empty
